2007/9/6 (TS):
 - eliminated 'sd' argument from udpCommReturnPacket().